<resources>
    <string name="app_name">Marketim</string>

    <string name="api_exception_unknown">Bilinmeyen bir sorun oluştu. Lütfen daha sonra tekrar deneyin.</string>
    <string name="api_exception_technical_error">Teknik aksaklıktan dolayı şuanda hizmet veremiyoruz, lütfen daha sonra
        tekrar deneyiniz.
    </string>

    <string name="user_name">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş</string>
    <string name="remember_me">Beni hatırla</string>

    <string name="error_empty_fields">Lütfen gerekli alanları doldurunuz</string>
    <string name="error_validation">Kullanıcı adı ya da şifre yanlış</string>

    <string name="okay">Tamam</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="logout">Çıkış Yap</string>
    <string name="exit_message">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
</resources>
