<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.MainActivity">

    <data>
        <variable name="vm" type="tr.com.storeapp.ui.MainViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="22sp"
                    android:textColor="@android:color/holo_red_dark"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32"
                    android:hint="@string/user_name"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxBackgroundColor="@android:color/white"
                    app:boxCornerRadiusBottomEnd="@dimen/dimen_4"
                    app:boxCornerRadiusBottomStart="@dimen/dimen_4"
                    app:boxCornerRadiusTopEnd="@dimen/dimen_4"
                    app:boxCornerRadiusTopStart="@dimen/dimen_4">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textNoSuggestions|text"
                        android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:hint="@string/password"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxBackgroundColor="@android:color/white"
                    app:boxCornerRadiusBottomEnd="@dimen/dimen_4"
                    app:boxCornerRadiusBottomStart="@dimen/dimen_4"
                    app:boxCornerRadiusTopEnd="@dimen/dimen_4"
                    app:boxCornerRadiusTopStart="@dimen/dimen_4"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textNoSuggestions|textPassword"
                        android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/scRemember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:layoutDirection="rtl"
                    app:switchPadding="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_8"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:padding="@dimen/dimen_16"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:backgroundTint="@android:color/holo_red_dark"
                    app:cornerRadius="@dimen/dimen_4"
                    android:onClick="onButtonClick"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>